Summary Number stats for NA12889_S1.vcf.gz NA12889_S1.genome.vcf.gz

--- a/notebook/2018-05-01-ceph-vars-greally/2018-05-01-ceph-vars-greally.Rmd
+++ b/notebook/2018-05-01-ceph-vars-greally/2018-05-01-ceph-vars-greally.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: default
-#title: 
+title: CEPH/Utah Illumina Call Sets
 tags: [ ceph, utah, vcf, truthset, callset ]
 featimg: "venn-S1-1.png"
 ---
