--- a/notebook/2018-06-11-ceph-utah-vars-remap/2018-06-11-ceph-utah-vars-remap.Rmd
+++ b/notebook/2018-06-11-ceph-utah-vars-remap/2018-06-11-ceph-utah-vars-remap.Rmd
@@ -66,6 +66,36 @@ Thus, remapping worked in the sense that it improved concordance up to a great e
   * the Illumina workflow had additional procedures relative to the Chesslab workflow
 * errors in remapping
 
+### Distribution of discordant variants with respect to genomic position
+
+The goal of this section is to see if and how discordant variants cluster on contigs (chromosomes).  Below are the positions of variants plotted for each partition (only Illumina, only Chesslab, or both) as dots and the probability density estimate for the distribution of positions is also plotted as solid lines.
+
+```{r}
+tsv <- "/big/results/bsm/2018-06-11-ceph-utah-vars-remap/chesslab-PASS/all.tsv"
+part <- read.delim(tsv, header = FALSE, colClasses = c("factor", "integer", "factor", "factor", "factor"), col.names = c("contig", "position", "ref", "alt", "partition"))
+levels(part$partition) <- c("only Illumina", "only Chesslab", "both")
+part$contig <- factor(part$contig, levels = c(1:22, "X", "Y", "MT"), ordered = TRUE)
+mydensityplot <- function(sel.contig, dat = part) {
+    densityplot(~ position | partition, data = dat, subset = contig == sel.contig, pch = ".", layout = c(1, 3), main = paste("chr", sel.contig))
+}
+```
+
+```{r partition-positions-1}
+mydensityplot("1")
+```
+
+```{r partition-positions-22}
+mydensityplot("22")
+```
+
+```{r partition-positions-X}
+mydensityplot("X")
+```
+
+```{r partition-positions-MT}
+mydensityplot("MT")
+```
+
 ### Concordance in the literature
 
 How concerning is the discordance that we see between the Chesslab and Illumina callsets?  [This article](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3706896/) presents results relevant to that question.  It seems that the concordance between various germline variant calling workflows is in general comparable or even lower to the concordance between the Chesslab and Illumina callsets.
